# alienMiniTools

./: .gitignore  LICENSE  README.md
GLBManipulator/: .gitignore  Program.cs  (+4 more)
GeminiCall/: .gitignore  CLAUDE.md  PLAN_MCP.md  README.md  config-example.json  config_loader.py  deploy.bat  fix_encoding.py  genai_service.py  implementation_plan.md  llm_service.py  main.py  mcp_service.py  openai_service.py  pyproject.toml  queue_manager.py  quick_test.py  rate_limiter.py  requirements.txt  run_server.bat  run_server.sh  run_test_fake_ollama.bat  run_test_gemini_tts.bat  run_test_gemma.bat  run_test_gemma_toolcalling.bat  run_test_gpt-5-nano.bat  run_test_jsonrpc.bat  run_test_mcp_chat.bat  schema.py  test_fake_ollama.py  test_gemini_tts.py  test_gemma.py  test_gemma_toolcalling.py  test_get_openai_modellist.py  test_gpt-5-nano.py  test_jsonrpc.py  test_mcp_chat.py
GeminiCall/.claude/: settings.local.json
GeminiCall/examples/: CallOllama.cs  GeminiCallExample.cs
GeminiCall/tests/: test_api.py  test_config.py  test_genai_service.py  test_mcp_api.py  test_mcp_service.py  test_queue.py  test_rate_limiter.py
QwenTTS/Qwen3-TTS-apiwrap/: app.py  pyproject.toml  run.bat  server.py  tts_client.py  web_ui.py
QwenTTS/Qwen3-TTS-apiwrap/static/: app.js  style.css
QwenTTS/Qwen3-TTS-apiwrap/templates/: index.html
TabbyFiles/: .gitignore  CLAUDE.md  generate_icons.py  main.py  pyproject.toml  run.sh
TabbyFiles/src/: config.py
TabbyFiles/src/ui/: filelist.py  gemma_dialog.py  mainwindow.py  sidebar.py  terminal.py
TabbyFiles/src/utils/: archive.py  ollama_client.py
(+733 files in other folders)
