[project]
name = "alien-file-manager"
version = "0.2.0"
description = "A modern file manager built with GTK3"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.32.5",
    "PyGObject>=3.42.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
